# pegboard

./: .env.example  .gitignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CURRENT_API_STATUS.md  DEPLOY_TO_SUPABASE.md  EDGE_FUNCTION_DEPLOYMENT.md  LAUNCH.md  LICENSE  Makefile  README.md  config.py  deploy-edge-function.sh  docker-compose.yml  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  run-in-supabase-editor.sql
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  REPO_SETUP.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  new_city.md  new_ingestor.md
.github/issues/: issue-01-austin-city-council-ingestor.md  issue-02-chicago-city-council-ingestor.md  issue-03-nyc-city-council-ingestor.md  (+12 more)
api/: __init__.py  main.py
backend/: import_tx_legislators.py
docs/: API_DATA_GOV_INTEGRATION.md  ARCHITECTURE.md  BULK_DATA_IMPLEMENTATION.md  BULK_DATA_MASTER_STRATEGY.md  BULK_DATA_STRATEGY.md  CACHE_VERIFICATION.md  FREE_TIER_DATA_STRATEGY.md  api-reference.md  getting-started.md  graph-schema.md  vision-civic-funding.md  vision-forum.md  writing-an-ingestor.md
frontend/: .env.local.example  civic-proxy.js
graph/: __init__.py  __main__.py  loader.py  queries.py  schema.py
ingestors/: __init__.py  base.py  congress_bills.py  congress_members.py  fec_contributions.py  run_all.py  usaspending.py
scripts/: processOpenStatesData.js
src/: App.css  App.tsx
supabase/: config.toml  seed.sql
tests/: __init__.py  test_api.py  test_congress_bills.py  test_congress_members.py  test_fec.py  test_graph_loader.py  test_usaspending.py
(+191 files in other folders)
