[project]
name = "pegboard"
version = "0.1.0"
description = "Open-source civic transparency platform"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
